module(
    name = "citidi",
    version = "0.1.0",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.0",
    dev_dependency = True,
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_build_error",
    version = "0.5.2",
    dev_dependency = True,
)
bazel_dep(
    name = "googletest",
    version = "1.14.0",
    dev_dependency = True,
)

git_repository(
    name = "hedron_compile_commands",
    branch = "main",
    dev_dependency = True,
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor",
)
