module(
    name = "citidi",
    version = "0.1.0",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_build_error",
    version = "0.5.2",
    dev_dependency = True,
)
bazel_dep(
    name = "googletest",
    version = "1.14.0",
    dev_dependency = True,
)

git_repository(
    name = "hedron_compile_commands",
    branch = "main",
    dev_dependency = True,
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor",
)
